--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "nodemailer": "^6.9.14",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
