--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "nodemailer": "^6.9.14",
     "uuid": "^10.0.0",
     "jsonwebtoken": "^9.0.2"
+    "prisma": "^5.15.1",
+    "@prisma/client": "^5.15.1"
   }
 }
