--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "nodemailer": "^6.9.14",
     "uuid": "^10.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.15.1",
     "@prisma/client": "^5.15.1"
   }
