--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.15.1",
     "@prisma/client": "^5.15.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
