--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "stream-chat": "^9.19.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "nodemailer": "^6.9.14",
@@ -22,5 +23,4 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   }
-  
 }
