--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "chmod +x node_modules/.bin/prisma",
     "build": "npx prisma generate"
   },
   "keywords": [],
