--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,20 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
+    { "src": "/cadastro", "destination": "/cadastro.html" },
+    { "src": "/login", "destination": "/login.html" },
+    { "src": "/painel", "destination": "/painel.html" },
+    { "src": "/esqueci-senha", "destination": "/esqueci-senha.html" },
+    { "src": "/redefinir-senha", "destination": "/redefinir-senha.html" },
+    { "src": "/verificacao", "destination": "/ajuda-verificacao.html" }
   ]
 }
