--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "chmod +x node_modules/.bin/prisma",
-    "build": "npx prisma generate"
+    "vercel-build": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
