--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "chmod +x node_modules/.bin/prisma",
-    "vercel-build": "npx prisma generate"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +21,9 @@
     "prisma": "^5.15.1",
     "stream-chat": "^9.19.1",
     "uuid": "^10.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
