--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "chmod +x node_modules/.bin/prisma && prisma generate"
+    "postinstall": "chmod +x node_modules/.bin/prisma",
+    "vercel-build": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,6 @@
     "prisma": "^5.15.1",
     "stream-chat": "^9.19.1",
     "uuid": "^10.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
